src/snapshots/pond__tests__help_config.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Inspect configuration.

Resolved values with provenance (show), the config file location (path), and the fully-annotated template (schema).

Usage: pond config show [OPTIONS]
       pond config path [OPTIONS]
       pond config schema [OPTIONS]
       pond config help [COMMAND]

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config-file <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG_FILE]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

pond config show:
Show the resolved configuration
  -h, --help
          Print help (see a summary with '-h')

pond config path:
Print the path of the config file pond loads
  -h, --help
          Print help (see a summary with '-h')

pond config schema:
Print the fully-annotated config.toml template
  -h, --help
          Print help (see a summary with '-h')

pond config help:
Print this message or the help of the given subcommand(s)

Examples:
  pond config show                 every setting, its value, and where it came from
  pond config schema > ~/.config/pond/config.toml   start from the annotated template
