src/snapshots/pond__tests__help_export.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Export a compact restorable .pond archive.

A .pond file is a zip of the canonical datasets plus a manifest; `pond import` restores it losslessly. `--format jsonl` streams the wire representation instead.

Usage: pond export [OPTIONS]

Options:
  -o, --out <OUT>
          Output path. Default: `pond-export.pond` for archive format, stdout for JSONL

      --format <FORMAT>
          Archive format: a compact .pond file, or the JSONL wire stream
          
          [default: pond]
          [possible values: pond, jsonl]

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Examples:
  pond export                          writes pond-export.pond
  pond export -o backup/$(date +%F).pond
  pond export --format jsonl | jq .    stream the wire form
