src/snapshots/pond__tests__help_get.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Fetch a session or message.

Returns readable transcripts by id: a whole session (`--session-id`) or one message with optional surrounding context (`--message-id`). Pagination cursors (`after-id:`) print at the end of truncated output.

Usage: pond get [OPTIONS] <--session-id <ID>|--message-id <ID>>

Options:
      --session-id <ID>
          Fetch an entire session by id. Mutually exclusive with `--message-id`

      --message-id <ID>
          Fetch a single message by id. Mutually exclusive with `--session-id`

      --namespace <NAMESPACE>
          Tenant namespace. The personal pond has exactly one; leave at the default
          
          [default: local]

      --context-depth <CONTEXT_DEPTH>
          For `--message-id` mode: include this many sibling messages on each side (grep -C style). Ignored in session mode
          
          [default: 0]

      --limit <LIMIT>
          Cap on returned messages (session mode) or parts (message mode)
          
          [default: 20]

      --response-mode <RESPONSE_MODE>
          Depth: conversational, complete, or verbatim.
          
          conversational = text + part summaries; complete = all messages + summaries; verbatim = full parts inline. With `--message-id` it selects which siblings fill the context window.
          
          [default: conversational]
          [possible values: conversational, complete, verbatim]

      --session-from <SESSION_FROM>
          Session mode only: which end to read from.
          
          start = oldest first (default); end = most recent, e.g. to recover context after compaction.
          
          [default: start]
          [possible values: start, end]

      --after-id <ID>
          Continuation anchor from a prior response: last message id (session) or last part id (message). Exclusive lower bound

      --format <FORMAT>
          [default: pretty]
          [possible values: pretty, json]

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Examples:
  pond get --session-id 58a96901-4a4f-40be-a3c1-62419ec8c580
  pond get --session-id <ID> --session-from end      most recent messages first
  pond get --message-id <ID> --context-depth 3       a hit plus its neighbors
  pond get --session-id <ID> --response-mode verbatim --format json
