src/snapshots/pond__tests__help_import.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Restore a .pond archive.

Idempotent union merge into the current destination: re-running the same archive inserts nothing new, and a populated destination unions rather than clobbers.

Usage: pond import [OPTIONS] <ARCHIVE>

Arguments:
  <ARCHIVE>
          Path to the .pond archive to restore

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Examples:
  pond import backup/2026-06-01.pond
